k8s/gap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lumina-app
  namespace: gap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lumina-app
  template:
    metadata:
      labels:
        app: lumina-app
    spec:
      containers:
        - name: lumina-app
          image: shaunakondare/lumina-jump:latest
          ports:
            - containerPort: 80
